# stock-spider

./: .gitignore  README.md  day.sh  log_checker.py  pyproject.toml  run.sh  week.sh
stock_spider/: entitys.py  environment.py  items.py  middlewares.py  pipelines.py  repository.py  run.py  settings.py
stock_spider/handlers/: http.py
stock_spider/spiders/: all_stock_code.py  earnings_per_share.py  emerging_month_trade.py  month_trade_spider.py  monthly_revenue_spider.py  public_month_trade_spider.py  stock_dividend.py
stock_spider/spiders/day/: day_announcement.py  day_brokerage.py  day_institutional_investor.py  day_price.py
stock_spider/spiders/month/: monthly_revenue.py
stock_spider/spiders/quarter/: earnings_per_share.py  profit_analysis.py
stock_spider/spiders/week/: cmoney_pe.py  week_price.py
stock_spider/spiders/year/: all_stock_code.py  stock_dividend.py
stock_spider/utils/: dateutil.py  numberutil.py
tests/: test_stock_spider.py
