[tool.poetry]
name = "stock_spider"
version = "0.1.0"
description = "crawl stock info"
authors = ["Lucas Lin<redcorvus0218@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.2.1"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
