[tool.poetry]
name = "stock_spider"
version = "0.1.0"
description = "crawl stock info"
authors = ["Lucas Lin<redcorvus0218@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.2.1"
pandas = "^1.0.5"
SQLObject = "^3.8.0"
html5lib = "^1.1"
BeautifulSoup4 = "^4.9.1"
scrapyd = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.5.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
